2004-10-17  David Brennan  <eCos@brennanhome.com>

	* src/fatfs.c:
	* src/fatfs_supp.c:
	* include/fatfs.h (NEW):
	* tests/fileio1.c:
	* cdl/fatfs.cdl: Added configurable support for FAT filesystem
	attributes.

2004-10-13  David Brennan  <eCos@brennanhome.com>

	* src/fatfs.c: Added code to setinfo to allow performing a
	file-system sync

2004-10-06  David Brennan  <eCos@brennanhome.com>

	* tests/fileio1.c: Added include of <stdio.h> to fix compiler
	warning for rename().

2004-08-10  Savin Zlobec  <savin@elatec.si>

        * src/fatfs.h:
        * src/fatfs_supp.c:
        Added FAT32 support.

2004-07-13  Savin Zlobec  <savin@elatec.si>

        * cdl/fatfs.cdl:
        * src/fatfs.h:
        * src/fatfs.c:
        * src/fatfs_supp.c:
        * src/fatfs_ncache.c:
        Refactored the code and changed file node cache memory 
        allocation from malloc to custom pool based one.

2004-07-05  Savin Zlobec  <savin@elatec.si>

        * cdl/fatfs.cdl:
        * src/fatfs.h:
        * src/fatfs.c:
        * src/fatfs_supp.c:
        * src/fatfs_ncache.c:
        Removed FAT table cache - it added little or no speed gain to
        the fatfs. Implemented private data for fatfs file descriptors which
        holds the current FAT cluster position, this greatly improves
        read/write times for big files comparing to the old implementation.
        * src/fatfs_tcache.c: Removed.

2004-06-24  Savin Zlobec  <savin@elatec.si>

        * src/fatfs.h:
        * src/fatfs_supp.c:
        Implemented fatfs_get_disk_usage function for 
        getting the number of total and free clusters.

2004-01-19  Nick Garnett  <nickg@calivar.com>


	* doc/README.txt: 
	* doc/fatfs.ecm: 
	* doc/fat16.ecm: 
	* doc/mkdisk0:
	Added some initial basic documentation, sample configurations and
	shell script to manufacture test disk image.
	
2003-10-18 Savin Zlobec <savin@elatec.si>

        * cdl/fatfs.cdl:
        * src/fatfs.h:
        * src/fatfs_ncache.c: